--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -116,6 +116,7 @@ homeassistant/components/daikin/* @fredrike
 homeassistant/components/darksky/* @fabaff
 homeassistant/components/debugpy/* @frenck
 homeassistant/components/deconz/* @Kane610
+homeassistant/components/deeds/* @wrieden
 homeassistant/components/delijn/* @bollewolle @Emilv2
 homeassistant/components/demo/* @home-assistant/core
 homeassistant/components/denonavr/* @ol-iver @starkillerOG
