--- a/homeassistant/components/deeds/manifest.json
+++ b/homeassistant/components/deeds/manifest.json
@@ -1,15 +1,11 @@
 {
   "domain": "deeds",
   "name": "deeds",
-  "config_flow": true,
   "documentation": "https://www.home-assistant.io/integrations/deeds",
   "requirements": [],
-  "ssdp": [],
-  "zeroconf": [],
-  "homekit": {},
   "dependencies": [],
   "codeowners": [
     "@wrieden"
   ],
-  "iot_class": "calculated"
+  "iot_class": "local_polling"
 }
